# eink-art-gallery

./: .gitignore  .pre-commit-config.yaml  Makefile  environment.yaml  environment_art.txt  environment_art.yaml  logging.yaml  notes.md  pictures.md  pyproject.toml  readme.md  requirements_picture.txt
assets/: creepy_prompts.txt  prompts_artists_bw.txt  prompts_cute.txt  prompts_landscape.txt  prompts_red_friendly.txt  prompts_sd3_bw.txt  prompts_sd3_color.txt  prompts_sd3_red.txt  random_artists.txt  random_christmas.txt  random_prompts.txt  random_styles.txt  styles.txt  styles_sd3.txt  styles_sd3_bw.txt  styles_sd3_red.txt  theme_halloween.txt
docs/: notes.md  pictures.md  setup_esp32.md  setup_raspberry.md  setup_windows_api.md
esphome/: .gitignore  Makefile  README.md  requirements.txt  secrets.yaml.example
esphome/boards/: dfrobot_firebeetle2_esp32e.yaml  dfrobot_firebeetle2_esp32s3.yaml  dfrobot_firebeetle2_esp32ue.yaml  waveshare-esp32-driver-board.yaml
esphome/displays/: 13-3in-k.yaml  7.5in.yaml
esphome/images/: README.md  example.txt
esphome/implementations/: advanced_esphome.yaml  picture_from_mdns_server.yaml  simple_picture_on_board.yaml  simple_picture_on_wifi.yaml  simple_time_check.yaml  sleep_fetch_sleep_4am-buffer-time.yaml  sleep_fetch_sleep_api-frame-cron.yaml  wakeup4am_fetch_sleep.yaml  wakeup4am_fetch_sleep_timefix.yaml
notebooks/: explore_art_generation.ipynb  explore_art_styles.ipynb  explore_dithering.ipynb
services/: .dockerignore  .gitignore  Makefile
services/canvas_coordinator/: .gitignore  Makefile  logging_config.yaml  (+5 more)
(+189 files in other folders)
