[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "picture_bundle"
# dynamic = ["version"]
version = "0.0.0"
authors = []
requires-python = ">=3.10"

# [tool.setuptools.dynamic]
# version = {attr = "paper_project.version.__version__"}

[options.packages.find]
where="src"

[tool.setuptools.package-data]
"*" = ["*.jinja"]
